--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/mowglixx/mowglixxCMS/issues"
   },
-  "homepage": "https://github.com/mowglixx/mowglixxCMS"
+  "homepage": "https://github.com/mowglixx/mowglixxCMS",
+  "dependencies": {
+    "express": "^4.17.1",
+    "pug": "^3.0.2"
+  }
 }
