--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "General purpose CMS with OpenAPI support and built in Developers Portal, made with Express.",
   "main": "src/app.js",
   "scripts": {
-    "test": "nodemon src/app.js"
+    "test": "nodemon src/app.js",
+    "start": "node src/app.js"
   },
   "repository": {
     "type": "git",
